--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=League+Spartan:wght@400;700&display=swap
 <meta name=" viewport" content="width=device-width, initial-scale=1.0">
   <title>Monsters - Dungeon Anarchists' Cookbook</title>
-  <link rel="stylesheet" href="monsters.css">
+  <link rel="stylesheet" href="rituals-and-ceremonies.css">
 </head>
 
 <body>
