--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div id="main">
     <span onclick="openNav()">&#9776;</span>
     <div id="content">
-      <h1>Monsters</h1>
+      <h1>Rituals and Ceremonies</h1>
       <div class="collapsible">
         <h2 onclick="toggleContent(this)">Soul Leech Capacitor</h2>
         <div class="content" style="display: none;">
