--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ The use of a Soul Leech Capacitor is a dark testament to the lengths some will g
   </div>
   </div>
 
-  <script src="monsters.js"></script>
+  <script src="rituals-and-ceremonies.js"></script>
 </body>
 
 </html>
