--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=League+Spartan:wght@400;700&display=swap
 <meta name=" viewport" content="width=device-width, initial-scale=1.0">
-  <title>Monsters - Dungeon Anarchists' Cookbook</title>
-  <link rel="stylesheet" href="rituals-and-ceremonies.css">
+  <title>Rituals and Ceremonies</title>
+  <link rel="stylesheet" href="ritualsandceremonies.css">
 </head>
 
 <body>
@@ -53,7 +53,7 @@ The use of a Soul Leech Capacitor is a dark testament to the lengths some will g
           </div>
         </div>
       </div>
-  <script src="rituals-and-ceremonies.js"></script>
+  <script src="ritualsandceremonies.js"></script>
 </body>
 
 </html>
